--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url("copy3.jpg");
+    background-image: url("images/copy2.jpg");
     /* background-repeat: no-repeat; */
     background-position: center;
     background-size: 110% 110%;
@@ -221,7 +221,7 @@ footer p{
 #contact-page{
   width: 100%;
   height: 100vh;
-  background-image: url(blooming-blossom-bouquet.jpg);
+  background-image: url(images/blooming-blossom-bouquet.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -292,12 +292,6 @@ footer p{
 #contact-page section{
   text-align: center;
 }
-
-
-
-
-
-
 
 
 
@@ -392,24 +386,7 @@ filter: hue-rotate(-70deg);
 
 }
 
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
-/*headers edition*/
+
 /*headers edition*/
 /*headers edition*/
 /*headers edition*/
@@ -473,7 +450,7 @@ h1:before{
 #banner{
   width: 100%;
   height: 25vh;
-  background-image: url(banner2.jpg);
+  background-image: url(images/banner2.jpg);
   /*lets make it 30 for desktops */
   background-size: 100% 25vh;
   background-position: top;
@@ -499,7 +476,7 @@ h1:before{
 }
 #resume-section p{
   word-wrap: break-word;
-overflow-wrap: break-word;
+  overflow-wrap: break-word;
   opacity: 0.9;
   text-align: left;
   line-height: 1.4rem;
@@ -539,53 +516,6 @@ overflow-wrap: break-word;
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* FOR DESKTOP VERSIONS*/
-/* FOR DESKTOP VERSIONS*/
-/* FOR DESKTOP VERSIONS*/
-/* FOR DESKTOP VERSIONS*/
 /* FOR DESKTOP VERSIONS*/
 /* FOR DESKTOP VERSIONS*/
 /* FOR DESKTOP VERSIONS*/
@@ -593,11 +523,11 @@ overflow-wrap: break-word;
 /* FOR DESKTOP VERSIONS*/
     @media(min-width:600px) {
       body{
-        max-width: 1350px;
+        max-width: 2350px;
       }
       header{
         height: 50vh;
-        background-image: url(sta.jpg);
+        background-image: url("images/a.png");
         background-size: 100% 50%;
         background-position: top;
         background-attachment: fixed;
@@ -608,7 +538,7 @@ overflow-wrap: break-word;
         background-color: rgba(15, 16, 142, 0.1);
       }
       header nav img{
-        background-image: url(logo.png);
+        background-image: url("images/logo.png");
         width: 45px;
         height: 35px;
         display: block;
