--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url("images/copy2.jpg");
+    background-image: url("../images/copy2.jpg");
     /* background-repeat: no-repeat; */
     background-position: center;
     background-size: 110% 110%;
@@ -221,7 +221,7 @@ footer p{
 #contact-page{
   width: 100%;
   height: 100vh;
-  background-image: url(images/blooming-blossom-bouquet.jpg);
+  background-image: url(../images/b.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -250,7 +250,7 @@ footer p{
   width: 350px;
   height: 300px;
   margin: 0 auto;
-  opacity: 0.75;
+  opacity: 0.5;
 }
 #contact-page div p{
   text-align: center;
@@ -264,7 +264,7 @@ footer p{
 }
 #contact-page div a{
   color: white;
-  opacity: 0.5;
+  opacity: 0.6;
   filter: invert(1);
 
 }
@@ -274,10 +274,10 @@ footer p{
   filter:
   invert(1)
 
-  drop-shadow(0 0 4px cyan)
+  drop-shadow(0 0 4px white)
   drop-shadow(0 0 5px blue)
-  drop-shadow(0 0 6px lightgreen)
-  drop-shadow(0 0 15px yellow);
+  drop-shadow(0 0 6px purple)
+  drop-shadow(0 0 15px pink);
   opacity: 1;
 
 }
@@ -450,7 +450,7 @@ h1:before{
 #banner{
   width: 100%;
   height: 25vh;
-  background-image: url(images/banner2.jpg);
+  background-image: url(../images/banner2.jpg);
   /*lets make it 30 for desktops */
   background-size: 100% 25vh;
   background-position: top;
@@ -527,7 +527,7 @@ h1:before{
       }
       header{
         height: 50vh;
-        background-image: url("images/a.png");
+        background-image: url("../images/a.png");
         background-size: 100% 50%;
         background-position: top;
         background-attachment: fixed;
@@ -538,7 +538,7 @@ h1:before{
         background-color: rgba(15, 16, 142, 0.1);
       }
       header nav img{
-        background-image: url("images/logo.png");
+        background-image: url("../images/logo.png");
         width: 45px;
         height: 35px;
         display: block;
