--- a/css/styles.css
+++ b/css/styles.css
@@ -295,17 +295,6 @@ footer p{
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
 /* ---------------------------------------------------- */
 /* ---------------------------------------------------- */
 /* ---------------------------------------------------- */
@@ -322,6 +311,7 @@ footer p{
 }
 /*each image in gallery*/
 #Gallery-image{
+  height: 300px;
   padding: 10px;
   margin: 30px 0px;
   border: 1px rgba(0, 0, 0, 0.4) solid;
@@ -330,6 +320,7 @@ footer p{
 #Gallery-image img{
   /*100 percent of its parent container*/
   width: 100%;
+  height: 230px;
   margin-top: 10px;
   transition: 0.2s;
 }
