--- a/css/styles.css
+++ b/css/styles.css
@@ -358,6 +358,10 @@ footer p{
   height: auto;
   margin: auto;
 }
+#project h2{
+  padding-top: 10px;
+  height: 80px;
+}
 #project{
   padding: 10px;
   margin: 30px 0px;
