--- a/css/styles.css
+++ b/css/styles.css
@@ -359,8 +359,8 @@ footer p{
   margin: auto;
 }
 #project h2{
-  padding-top: 10px;
-  height: 80px;
+  padding: 10px;
+  height: 60px;
 }
 #project{
   padding: 10px;
